OCR_text files cleaning

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 llama-index
-weaviate-client
+qdrant-client
 python-dotenv
-llama-index-vector-stores-weaviate
+llama-index-vector-stores-qdrant
 llama-index-llms-google-genai
 llama-index-embeddings-google-genai
 pypdf
