--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,10 @@
 llama-index
-qdrant-client
 python-dotenv
-llama-index-vector-stores-qdrant
 llama-index-llms-google-genai
 llama-index-embeddings-google-genai
+llama-index-vector-stores-weaviate
 pypdf
+weaviate-client
+Flask
+Flask-Cors
+# easyocr
